@@ -1,5 +1,6 @@
 0.0.8 (in development)
 ------------------------------------------------------------------------
+- Feature: OpenRCT2 now starts up on the display it was last shown on.
 - Fix: Track components added by OpenRCT2 are now usable in older scenarios.
 
 0.0.7 (2017-05-03)
